Replace top bar

--- a/ui/src/style.scss
+++ b/ui/src/style.scss
@@ -1,4 +1,8 @@
+@import "@material/typography/mdc-typography";
+
+.container {
+  padding: 30px;
+}
+
 body {
-    background-color: aliceblue;
-    color: #ff392d;
 }
